@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.33
+    - added calendar()
 
 0.32
     - added banner()
